Gossip: a deed now reaches people who were not standing there
DESIGN.md §4 steps 6 and 7. A deed enters its settlement's deque on emit, and
one story per settlement is retold every 250 ticks — four an in-game hour —
to each resident who does not already know it, at 0.35 each.

The blur contradiction, resolved by moving the retention and nothing else.
The design carried three clauses written before there was code: confidence
x 0.85, max 2 hops, identity blurs below 50. At 0.85 two hops lands at 72, so
the blur could never fire and the exit criterion was unreachable. Raising the
hop count needs five hops; raising the blur threshold makes a two-hop story
anonymous, which is exactly the story session 10's acceptance script needs
named. Lowering the retention is the only lever that moves the two hops in
opposite directions relative to the threshold, and 0.70 is the top of the
window that works: 100 -> 70 -> 49.

Nothing counts hops. "Max 2 hops" falls out of the retention and the
attribution floor, so Deed keeps seven fields and every ring in every save
keeps its shape.

Schema 6, additive, with a datafixer: the deque is persisted because a rumour
in flight references a deed, which references personas and settlements by id,
and because session 10's 1200-6000 tick delay makes an in-flight story certain
to cross a save. A queued rumour is a Deed, so no new persisted record exists
to ledger.

Ruled here: the better-attested copy of an event wins a ring slot, and it does
not move in the ring.

281 unit tests (was 252), both loaders green.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>